# dbt-olist-ecommerce

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  dwh_schema.drawio  main.py  pyproject.toml
config/: airflow.cfg
dags/: dbt_staging.py  dbt_warehouse.py  extract_load_raw.py
dags/minio/: extract_data.py  extract_geo_city.py  load_to_minio.py
dags/raw/: extract_data.py  extract_geo_city.py  extract_geo_zipcodes.py  load_to_minio.py
dags/warehouse/: schema_init.py
include/dbt/olist_analytics/: dbt_project.yml  package-lock.yml  packages.yml
include/dbt/olist_analytics/models/staging/: staging_category_name_translation.sql  staging_customer.sql
include/dbt/olist_analytics/seeds/: payment_type.csv
include/dbt/olist_analytics/tests/: category_name_english.sql
include/dbt/olist_analytics/tests/generic/: generic_non_zero_negative.sql  generic_not_tommorow.sql
pipelines/include/dbt/olist_analytics/: .gitignore  dbt_project.yml
pipelines/include/dbt/olist_analytics/analyses/: customer_analysis.sql  geolocation_analysis.sql  order_payments_analysis.sql  orders_analysis.sql  payment_analysis.sql
pipelines/include/dbt/olist_analytics/macros/: generate_schema_name.sql
pipelines/include/dbt/olist_analytics/seeds/: order_status.csv
pipelines/include/dbt/olist_analytics/tests/: bigger_total_price.sql  (+2 more)
pipelines/include/src/: extract_data.py  extract_geo_zipcodes.py  load_to_bronze.py  load_to_minio.py  load_to_raw.py  schema_init.py
tests/: test_extract_data.py  test_load_to_minio.py  test_schema_init.py
tools/: fernet-generator.py
(+27 files in other folders)
