[project]
name = "dbt-olist-ecommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.31",
    "cryptography>=49.0.0",
    "dbt-core>=1.11.11",
    "dbt-databricks>=1.12.1",
    "dotenv>=0.9.9",
    "kagglehub>=1.0.2",
    "minio>=7.2.20",
    "pytest>=9.1.1",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
