[project]
name = "dbt-olist-ecommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "anyio>=4.14.1",
    "boto3>=1.43.31",
    "cryptography>=49.0.0",
    "databricks-connect==18.2.0",
    "dbt-core>=1.11.11",
    "dbt-databricks>=1.12.1",
    "dbt-duckdb>=1.10.1",
    "dotenv>=0.9.9",
    "kagglehub>=1.0.2",
    "minio>=7.2.20",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "unidecode>=1.4.0",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--asyncio-mode=auto"
pythonpath = ["."]
